--- a/payment-app/Dockerfile
+++ b/payment-app/Dockerfile
@@ -12,6 +12,7 @@ RUN rm -rf /usr/share/nginx/html/*
 
 # Copy our payment page
 COPY index.html /usr/share/nginx/html/index.html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
 EXPOSE 80
